--- a/source/css/style.css
+++ b/source/css/style.css
@@ -110,7 +110,7 @@ body {
 }
 #nexmoe-header .nexmoe-list .nexmoe-list-item {
     padding:0 36px;
-    color:#9ca2a8;
+    color:#BBBBBB;
     transition:all .35s;
     border-radius:10px;
     margin-bottom:10px;
